changed some spacing

--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,8 @@ body {
   /*background-image: url(binary.png);*/
   /*border:2px solid ;*/
   background-color: #000000;
+  margin: 0;
+  font-family: "my_underwood";
 
   /*background-color: rgb(11, 13, 43, 0.5)*/
   /*background-attachment: fixed;*/
@@ -18,7 +20,7 @@ nav {
   padding: 20px;
   font-size: 1.2em;
   /*border: 2px solid;*/
-  background-color: rgb(6, 6, 6, 1)
+  background-color: rgb(20, 20, 20, 1)
   /*border: 10px solid #2d2d5a;*/
 }
 
@@ -51,10 +53,13 @@ section h2 {
 
 header {
   /* border: 2px solid; */
-  background: linear-gradient(rgba(6, 6, 6, 1),rgba(245, 245, 249, 0.3)), url(computer2.png);
+  background: linear-gradient(rgba(0, 0, 0, 1),rgba(245, 245, 249, 0.3)), url(computer2.png);
   background-size: 100% auto;
-  font-family: "my_underwood";
-  height: 48vh;
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  /*font-family: "my_underwood";*/
+  /*height: 40.6vh;*/
+  /*height: calc(10% - 80px);*/
 }
 
 
@@ -62,14 +67,16 @@ header h1 {
   padding-left: 10%;
   padding-top: 3.5%;
   /* font-size: 3em; */
-  font-size: 8vh;
+  font-size: 8vw;
   margin: .6em;
 }
 
 header h2 {
   padding-left: 45%;
   padding-top: 7%;
-  font-size: 2em;
+  font-size: 5vw;
+  padding-bottom: 9%;
+  margin: 0;
 }
 
 /*@media only screen and (min-width: 800px) {
