--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,13 @@
 body {
   box-sizing: border-box;
   color: #fff;
+  width: 100%;
   /*background-image: url(binary.png);*/
   /*border:2px solid ;*/
   background-color: #000000;
+  /*background: linear-gradient(rgba(0, 0, 0, .7),rgba(14, 14, 14, .7)), url(background.jpg);*/
   margin: 0;
   font-family: "my_underwood";
-
-  /*background-color: rgb(11, 13, 43, 0.5)*/
   /*background-attachment: fixed;*/
 }
 @font-face {
@@ -19,9 +19,7 @@ nav {
   text-align: center;
   padding: 20px;
   font-size: 1.2em;
-  /*border: 2px solid;*/
   background-color: rgb(20, 20, 20, 1)
-  /*border: 10px solid #2d2d5a;*/
 }
 
 a {
@@ -34,57 +32,84 @@ nav a {
 }
 
 #headshot {
-  /*border: 10px solid #2d2d5a;*/
-  width: 20%;
-  height: auto;
-  min-width: 150px;
+  /* border: 10px solid #2d2d5a; */
+  /*align-self: center;*/
+  padding: 1.5em;
+  width: 20vw;
+  /*height: auto;*/
+  /*min-width: 150px;*/
 
 }
-section h2 {
-  display: inline-block;
-  padding-left: 20%;
+.rightpage h2 {
+  /* display: inline-block; */
+  /* padding-left: 20%; */
+  padding-bottom: 5%;
   font-size: 2.4em;
+  margin: 0;
 }
 .background {
   padding:2%;
-  /*border: 2px solid;*/
-  background-color: rgba(0, 0, 0, 1)
+  /*background-color: rgba(0, 0, 0, 1)*/
 }
 
 header {
   /* border: 2px solid; */
-  background: linear-gradient(rgba(0, 0, 0, 1),rgba(245, 245, 249, 0.3)), url(computer2.png);
+  background: linear-gradient(rgba(0, 0, 0, 1),rgba(245, 245, 249, 0.3)), url(computer3.png);
   background-size: 100% auto;
   background-repeat: no-repeat;
   background-position: right bottom;
-  /*font-family: "my_underwood";*/
-  /*height: 40.6vh;*/
-  /*height: calc(10% - 80px);*/
-}
 
+}
 
 header h1 {
-  padding-left: 10%;
-  padding-top: 3.5%;
-  /* font-size: 3em; */
-  font-size: 8vw;
-  margin: .6em;
-}
-
-header h2 {
-  padding-left: 45%;
-  padding-top: 7%;
+  padding-left: 15%;
+  padding-top: 7.5%;
+  padding-bottom: 2%;
   font-size: 5vw;
-  padding-bottom: 9%;
   margin: 0;
 }
 
-/*@media only screen and (min-width: 800px) {
-  #headshot {
+
+header h2 {
+  padding-left: 55%;
+  padding-top: 1%;
+  font-size: 4vw;
+  padding-bottom: 7%;
+  margin: 0;
+}
+.background {
+  display: flex;
+  flex-wrap: wrap;
+}
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 1.2em;
+  width: 25vw;
+}
+
+.rightpage {
+  padding: 1%;
+  padding-top: 4%;
+  width: 60vw;
+}
+
+.rightpage h3, .rightpage h2, .rightpage p {
+  font-family: "Courier New", Courier, monospace;
+}
+
+@media only screen and (max-width: 423px) {
+  .background {
+    display: flex;
+    flex-wrap: wrap-reverse;
+  }
+  .rightpage {
     width: 100%;
   }
 }
 
+/*
 @supports (display: flex) {
   ul{
     display: flex;
